# mojo-unnet

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pixi.toml  pyproject.toml
.github/workflows/: ci.yml
notebooks/: grad.ipynb  nn.ipynb
playground/: backward.mojo
tests/: test_backward.mojo  test_grad.mojo  test_nn.mojo  test_utils.mojo
unnet/: __init__.mojo  grad.mojo  nn.mojo  registry.mojo  utils.mojo  uuid.mojo
utils/: notebook.py  run.py
