[project]
name = "mojo-unnet"
version = "0.1.0"
description = "Micro Neural Network in pure Mojo - Educational proof-of-concept for learning neural networks"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "graphviz>=0.21",
]

[project.urls]
"Source" = "https://github.com/yourusername/mojo-unnet"
"Bug Tracker" = "https://github.com/yourusername/mojo-unnet/issues"


# UV configuration for Mojo packages
[tool.uv.sources]
max = [
    { index = "modular-nightly" },
]
mblack = [
    { index = "modular-nightly" },
]
max-core = [
    { index = "modular-nightly" },
]
mojo-compiler = [
    { index = "modular-nightly" },
]

[[tool.uv.index]]
name = "modular-nightly"
url = "https://dl.modular.com/public/nightly/python/simple/"
explicit = true

[tool.uv]
prerelease = "allow"
python-preference = "only-managed"

[dependency-groups]
dev = [
    "pre-commit>=3.0.0",
    "mblack",
    "mojo-compiler",
]
